# services/api-gateway/cmd/api.go
@@ -152,24 +152,34 @@ func (app *application) mount() http.Handler {
 			r.Route("/fleet", func(r chi.Router) {
 
 				r.Route("/vehicles", func(r chi.Router) {
+
 					r.Post("/", app.createVehicleHandler)
 					r.Get("/", app.listVehiclesHandler)
 					r.Get("/{vehicleId}", app.getVehicleHandler)
+
+					r.Put("/{vehicleId}", app.updateVehicleHandler)
+
+					r.Patch("/{vehicleId}/status", app.updateVehicleStatusHandler)
 				})
 
 				r.Route("/drivers", func(r chi.Router) {
+
 					r.Post("/", app.createDriverHandler)
 					r.Get("/", app.listDriversHandler)
+
+					r.Put("/{driverId}", app.updateDriverHandler)
+
+					r.Patch("/{driverId}/status", app.updateDriverStatusHandler)
 				})
 
 				r.Route("/trips", func(r chi.Router) {
+
 					r.Post("/", app.createTripHandler)
 					r.Get("/", app.listTripsHandler)
 
 					r.Post("/{tripId}/start", app.startTripHandler)
 					r.Post("/{tripId}/complete", app.completeTripHandler)
 				})
-
 			})
 		})
 
